# recipe_web_app

./: .gitignore
nutrient_db/: create_tables.sql  init_db.sh  init_db.txt
nutrient_db/raw_data/: CONVERSION FACTOR.csv  FOOD GROUP.csv  FOOD NAME.csv  FOOD SOURCE.csv  MEASURE NAME.csv  REFUSE NAME.csv  YIELD AMOUNT.csv  YIELD NAME.csv
remix/: package-lock.json  package.json  tailwind.config.ts
remix/app/: root.tsx  tailwind.css
remix/app/components/: TopMenu.tsx
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/migrations/: 0001_create_tables.sql  01_create_tables.sql
rust/src/: config.rs  error.rs  main.rs
rust/src/ctx/: mod.rs
rust/src/models/: db.rs  error.rs  food_name.rs  measure.rs  mod.rs  requests.rs  user.rs
rust/src/models/store/: error.rs  mod.rs
rust/src/services/: db_service.rs  mod.rs  rusqlite_service.rs  sqlx_service.rs
rust/src/services/auth_service/: error.rs  mod.rs
rust/src/services/crypto_service/: error.rs  mod.rs
rust/src/services/food_service/: error.rs  mod.rs
rust/src/services/jwt_service/: error.rs  mod.rs
rust/src/web/: error.rs  middleware.rs  mod.rs  route_login.rs  routes_auth.rs  routes_food.rs  routes_hello.rs
rust/tests/: quick_dev.rs
vite/: package-lock.json  package.json  tailwind.config.js
vite/src/: App.tsx
vite/src/components/: Login.tsx  LoginButton.tsx  Recipe.tsx  RecipeRow.tsx  TopMenu.tsx
vite/src/context/: AuthContext.tsx  RecipeContext.tsx
