[package]
name = "recipez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
# rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1",  features = ["full"] }
tower-http = {  version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
thiserror = "1.0"
[dev-dependencies]
httpc-test = "0.1"