[package]
name = "recipez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum = "0.6"
bcrypt = "0.15"
chrono = "0.4"
hmac = "0.12"
jwt = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
thiserror = "1.0"
tokio = { version = "1",  features = ["full"] }
tower-http = {  version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
tracing = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
httpc-test = "0.1"
